--- a/src/scss/movie.scss
+++ b/src/scss/movie.scss
@@ -1,13 +1,25 @@
-
 // Estilos de las películas
 .buttons-container {
   display: flex;
-  justify-content: right;
+  justify-content: space-between;
   padding: 30px;
   color: white;
 }
 
-.grid, .list {
+.select-input {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.select-style {
+  cursor: pointer;
+  color: #e0011a;
+  font-weight: bold;
+}
+
+.grid,
+.list {
   margin-right: 10px;
   cursor: pointer;
 }
@@ -70,6 +82,78 @@
   padding-right: 5px;
 }
 
+
+/* cards en filas */
+// .section-1,
+// .section-2 {
+//     display: flex;
+//     justify-content: center;
+//     gap: 20px;
+//     margin-top: 50px;
+// }
+
+// .section-2 {
+//     margin-top: 50px;
+// }
+
+// .movie-container {
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: column;
+//     align-items: center;
+//     padding: 30px;
+//     min-height: 100vh;
+// }
+
+// .movie {
+//     /* este width controla el tamaño de toda la card de la peli */
+//     /* width: 170px; */
+//     display: flex;
+//     gap: 20px;
+//     border: 1px solid salmon;
+//     padding: 25px;
+// }
+
+// .movie-number {
+//     display: flex;
+//     align-items: center;
+//     font-size: 2em;
+//     font-weight: bold;
+// }
+
+// .movie-poster {
+//     border-radius: 8px;
+//     block-size: 220px;
+// }
+
+// .movie-title {
+//     font-size: 1.2em;
+//     font-weight: bold;
+//     display: flex;
+//     align-items: center;
+// }
+
+// .movie-data {
+//     font-weight: bold;
+//     display: flex;
+//     align-items: center;
+// }
+
+// .movie-description-heading {
+//     font-size: 1.2em;
+// }
+
+// .movie-description {
+//     margin: 6px 0;
+//     line-height: 1.4;
+// }
+
+// .movie-other {
+//     line-height: 1.4;
+//     font-weight: bold;
+//     display: flex;
+//     align-items: center;
+// }
 
 
 
@@ -184,6 +268,7 @@ header {
 .header .youtube:hover {
   fill: #e0011a;
 }
+
 // Fin HEADER
 
 
