--- a/src/scss/movie.scss
+++ b/src/scss/movie.scss
@@ -1,4 +1,4 @@
-// Estilos de las películas
+// Grid styles
 .buttons-container {
   display: flex;
   justify-content: space-between;
@@ -83,79 +83,71 @@
 }
 
 
-/* cards en filas */
+// List style
 
 // cambiar los valores de clase para las filas
-// .section-1,
-// .section-2 {
-//     display: flex;
-//     justify-content: center;
-//     gap: 20px;
-//     margin-top: 50px;
-// }
+.section-1,
+.section-2 {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+}
 
-// .section-2 {
-//     margin-top: 50px;
-// }
+.section-2 {
+    margin-top: 50px;
+}
 
-// .movie-container {
-//     display: flex;
-//     justify-content: center;
-//     flex-direction: column;
-//     align-items: center;
-//     padding: 30px;
-//     min-height: 100vh;
-// }
+.list-movie-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    min-height: 100vh;
+}
 
-// .movie {
-//     /* este width controla el tamaño de toda la card de la peli */
-//     /* width: 170px; */
-//     display: flex;
-//     gap: 20px;
-//     border: 1px solid salmon;
-//     padding: 25px;
-// }
+.list-movie {
+    /* este width controla el tamaño de toda la card de la peli */
+    /* width: 170px; */
+    display: flex;
+    gap: 20px;
+    border: 1px solid salmon;
+    padding: 25px;
+}
 
-// .movie-number {
-//     display: flex;
-//     align-items: center;
-//     font-size: 2em;
-//     font-weight: bold;
-// }
+.list-movie-number {
+    display: flex;
+    align-items: center;
+    font-size: 2em;
+    font-weight: bold;
+}
 
- .movie-img {
+ .list-movie-img {
      border-radius: 8px;
      block-size: 220px;
  }
 
-// .movie-title {
-//     font-size: 1.2em;
-//     font-weight: bold;
-//     display: flex;
-//     align-items: center;
-// }
+.list-movie-title {
+    font-size: 1.2em;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
 
-// .movie-data {
-//     font-weight: bold;
-//     display: flex;
-//     align-items: center;
-// }
+.list-movie-data {
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
 
-// .movie-description-heading {
-//     font-size: 1.2em;
-// }
 
-// .movie-description {
-//     margin: 6px 0;
-//     line-height: 1.4;
-// }
-
-// .movie-other {
-//     line-height: 1.4;
-//     font-weight: bold;
-//     display: flex;
-//     align-items: center;
-// }
+.list-movie-other {
+    line-height: 1.4;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
 
 
 
