--- a/src/scss/movie.scss
+++ b/src/scss/movie.scss
@@ -85,68 +85,75 @@
 
 // List style
 
-// cambiar los valores de clase para las filas
+
 .section-1,
 .section-2 {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
 }
 
 .section-2 {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .list-movie-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px;
-    min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .list-movie {
-    /* este width controla el tamaño de toda la card de la peli */
-    /* width: 170px; */
-    display: flex;
-    gap: 20px;
-    border: 1px solid salmon;
-    padding: 25px;
+  /* este width controla el tamaño de toda la card de la peli */
+  /* width: 170px; */
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  border-radius: 20px;
+  border: 1px solid salmon;
+  padding: 25px;
+  margin-bottom: 30px;
+  width: 100%;
 }
 
 .list-movie-number {
-    display: flex;
-    align-items: center;
-    font-size: 2em;
-    font-weight: bold;
+  display: flex;
+  align-items: center;
+  font-size: 2em;
+  font-weight: bold;
 }
 
- .list-movie-img {
-     border-radius: 8px;
-     block-size: 220px;
- }
+.list-movie-img {
+  height: 255px;
+  width: 155px;
+  border-radius: 8px;
+  block-size: 220px;
+}
 
 .list-movie-title {
-    font-size: 1.2em;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
+  font-size: 1.2em;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
 }
 
 .list-movie-data {
-    font-weight: bold;
-    display: flex;
-    align-items: center;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
 }
 
 
 .list-movie-other {
-    line-height: 1.4;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
+  line-height: 1.4;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
 }
 
 
